--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    cursor: none;
 }
 
 :root {
@@ -71,7 +72,6 @@ img {
     background: var(--clr-accent);
     color: var(--clr-dark);
     text-decoration: none;
-    cursor: pointer;
     font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -399,4 +399,40 @@ header {
 
 .social-list__link {
     padding: 0.5em;
+}
+
+/* Cursor */
+
+.inner-cursor {
+    position: fixed;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    transform: translate(-50%, -50%);
+    background-color: var(--clr-light);
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: width 0.5s, height 0.5s;
+    z-index: 1500;
+}
+
+.inner-cursor.grow {
+    width: 25px;
+    height: 25px;
+    transition: width 0.5s, height 0.5s;
+    z-index: 1500;
+}
+
+.outer-cursor {
+    position: fixed;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    transform: translate(-50%, -50%);
+    border: 1px solid var(--clr-light);
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 1500;
 }
